<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/direncFragment"
        android:icon="@drawable/resistoricon"
        android:title="@string/direncbaslik" />
    <item
        android:id="@+id/kondansatorFragment"
        android:icon="@drawable/kondansatoricon"
        android:title="@string/kondansator" />
    <item
        android:id="@+id/ohmKanunuFragment"
        android:icon="@drawable/omegaicon"
        android:title="@string/ohmkanunu" />
    <item
        android:id="@+id/seriFragment"
        android:icon="@drawable/s_icon"
        android:title="@string/seribaglidirenc" />
    <item
        android:id="@+id/paralelFragment"
        android:icon="@drawable/p_icon"
        android:title="@string/paralelbaglidirenc" />
    <item
        android:id="@+id/kirsofGerilimFragment"
        android:icon="@drawable/voltageicon"
        android:title="@string/kirsofgerilim" />
    <item
        android:id="@+id/kirsofAkimFragment"
        android:icon="@drawable/akimicon"
        android:title="@string/kirsofakim" />
    <item
        android:id="@+id/ledOnDirenc"
        android:icon="@drawable/ledicon"
        android:title="@string/ledseri" />
    <item
        android:id="@+id/ayarlarFragment"
        android:icon="@drawable/ayarlaricon"
        android:title="@string/ayarlar" />
</menu>